{
    "name": "CameraController",
    "maps": [
        {
            "name": "Control",
            "id": "ceee8642-9ba8-47b4-b1a1-63ad603d0008",
            "actions": [
                {
                    "name": "MoveInXYAxis",
                    "type": "PassThrough",
                    "id": "428fa7b1-ffac-4114-93f6-f003368cdf99",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "PassThrough",
                    "id": "59a42a33-f1e5-4305-b061-ec2ff683908e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveInZAxis",
                    "type": "PassThrough",
                    "id": "3e838f59-6571-4864-841b-ccee88f9e3de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2b732a6-c639-4c67-b6f7-4fa66c2de091",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInXYAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c22cfaa-6c5a-403c-94e2-ad81561d61b7",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65175db1-a384-4bd2-a61e-994b4b266770",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveInZAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fd28247-6efd-4235-9ca6-bf871af276e2",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "Scale(factor=-1)",
                    "groups": "",
                    "action": "MoveInZAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}